--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
 
     /* Linting */
     // "strict": true,
